<?xml version="1.0" encoding="utf-8"?>
<!--  Single List Item Design -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_order_history"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="20dp"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:id="@+id/toolbar_menu_oh"
                android:layout_height="wrap_content"
                android:background="@color/purple">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/order_id"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:id="@+id/order_id_order_history"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/order_status_oh"
                    android:background="@color/orange"
                    android:text="@string/order_status"
                    style="@style/Base.TextAppearance.AppCompat.Medium"

                    />

            </android.support.v7.widget.Toolbar>
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/skin">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:text="@string/booking_date"
                    android:id="@+id/booking_date_oh"
                    android:paddingRight="10dp"
                    style="@style/Base.TextAppearance.AppCompat.Small"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/pickup_date"
                    android:id="@+id/pickup_date_oh"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textAlignment="center"
                    style="@style/Base.TextAppearance.AppCompat.Small"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/drop_date"
                    android:paddingLeft="10dp"
                    android:textAlignment="center"
                    android:id="@+id/drop_date_oh"
                    style="@style/Base.TextAppearance.AppCompat.Small"/>

            </android.support.v7.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/customer_name"
                    android:textColor="@color/black"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/customer_name_oh"
                    android:paddingLeft="10dp"
                    style="@style/Base.TextAppearance.AppCompat.Medium"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/phone_number"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone_no_oh"
                    style="@style/Base.TextAppearance.AppCompat.Small"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/pickup_location"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:text="@string/drop_location"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="170dp"
                    android:id="@+id/pickup_location_oh"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/drop_location_oh"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
