<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_wallpaper">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_logo_fb"
            android:contentDescription="@string/user" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/skin"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/title_home"/>

    </android.support.v7.widget.Toolbar>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/home_grid"
        android:columnCount="2"

        android:layout_gravity="center_horizontal"
        android:rowCount="3">
        <RelativeLayout
            android:layout_height="140dp"
            android:background="@color/white_overlay"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/grid_1"

            android:layout_width="150dp"
            android:clickable="true">
        <ImageView
            android:id="@+id/grid_order_history"
            android:layout_width="match_parent"
            android:clickable="false"

            android:src="@drawable/ic_clock"
            android:layout_height="120dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/img_order_history"
                android:gravity="center"
                android:layout_marginTop="100dp"
                android:textSize="20sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_height="140dp"
            android:background="@color/white_overlay"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/grid_2"
            android:layout_width="150dp"
            android:clickable="true">
            <ImageView
                android:id="@+id/grid_my_account"
                android:layout_width="match_parent"
                android:clickable="false"
                android:src="@drawable/ic_user"
                android:layout_height="110dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/img_my_account"
                android:gravity="center"
                android:layout_marginTop="100dp"
                android:textSize="20sp"

                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_height="140dp"
            android:background="@color/white_overlay"
            android:layout_margin="10dp"
            android:id="@+id/grid_3"
            android:layout_width="150dp"
            android:clickable="true">
            <ImageView
                android:id="@+id/grid_support"
                android:layout_width="match_parent"
                android:clickable="false"
                android:src="@drawable/ic_speaker"
                android:layout_height="110dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/img_support"
                android:gravity="center"
                android:layout_marginTop="100dp"
                android:textSize="20sp"

                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_height="140dp"
            android:background="@color/white_overlay"
            android:layout_margin="10dp"
            android:id="@+id/grid_4"
            android:layout_width="150dp"
            android:clickable="true">
            <ImageView
                android:id="@+id/grid_app_version"
                android:layout_width="match_parent"
                android:clickable="false"
                android:src="@drawable/ic_info_phone"
                android:layout_height="110dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/img_app_ver"
                android:gravity="center"
                android:layout_marginTop="100dp"
                android:textSize="20sp"
                />
        </RelativeLayout>
    </GridLayout>
</LinearLayout>