<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:background="@color/white">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/left"
            android:padding="5dp"
            android:background="@color/white"
            android:clickable="true"
            android:id="@+id/home_img_button_my_account"
            android:scaleType="fitCenter"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/skin"
            android:gravity="center"
            android:layout_marginRight="60dp"
            android:text="@string/title_my_account"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:padding="10dp"
        android:layout_width="180dp"
        android:textColor="@color/purple"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/username_ma"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_name_ma"
        android:padding="10dp"
        android:textColor="@color/purple"
        style="@style/Base.TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="180dp"
            android:textColor="@color/purple"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/phone_ma"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_no_ma"
            android:paddingLeft="10dp"
            android:textColor="@color/purple"
            style="@style/Base.TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="180dp"
            android:textColor="@color/purple"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/address_ma"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address_ma"
            android:paddingLeft="10dp"
            android:textColor="@color/purple"
            style="@style/Base.TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/password_ma"
        android:id="@+id/change_password_ma"
        android:onClick="changePass"
        android:layout_marginTop="50dp"/>
</LinearLayout>